<resources>
    <string name="app_name">Travel Pal</string>
    <string name="title_activity_packing_list">PackingListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_actions">ActionsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_post">New Post</string>
    <string name="fab_tutorial">Click here to create new posts</string>
    <string name="post_error">This field can not be empty</string>
    <string name="ok">OK</string>
    <string name="edit_post">Edit post</string>
    <string name="handler_error">The activity does not implement the PostHandlerInterface</string>
    <string name="location_error">Invalid location, please try again</string>
    <string name="budapest">Budapest</string>
    <string name="travel_diary_entries">Travel diary entries:</string>
    <string name="title_of_post">Title of post</string>
    <string name="location">Location</string>
    <string name="body_of_post">Body of post</string>
    <string name="packinghandler_exception">The activity does not support PackingItemHandler</string>
    <string name="close">Close</string>
    <string name="packing_item">Packing Item</string>
    <string name="blank_error">You cannot leave this blank.</string>
    <string name="Hungary">HU</string>
    <string name="sample_phone_112">112</string>
    <string name="emer_api">http://emergencynumberapi.com/api/country/</string>
    <string name="fire">Fire:</string>
    <string name="ambulance">Ambulance:</string>
    <string name="police">Police:</string>
    <string name="city">Budapest</string>
    <string name="metric_unit">metric</string>
    <string name="weather_api">http://api.openweathermap.org</string>
    <string name="api_id">5a13d96e29f35760c21e1d7ec909ff90</string>
    <string name="min_temp">Min Temp:</string>
    <string name="max_temp">Max Temp:</string>
    <string name="add_dialog">ADD_DIALOG</string>
    <string name="packing_list">Packing List</string>
    <string name="travel_info">Travel Info</string>
    <string name="save_emer_num">1. Save Emergency Numbers</string>
    <string name="update_your_electronics">Update your electronics!</string>
    <string name="search">Search</string>
    <string name="weather_information">Weather Information</string>
    <string name="metric_txt">Metric</string>
    <string name="imperial_txt">Imperial</string>
    <string name="quantity">Quantity</string>
    <string name="packed_status">Packed Status</string>
    <string name="pi_item_name">Item name</string>
    <string name="cb_packed_stat">Packed Status</string>
    <string name="x_button">X</string>
    <string name="packing_item_quantity_tv">Packing Item Quantity</string>
    <string name="packing_item_name_tv">Packing Item Name</string>
    <string name="delete_list">Delete list</string>
    <string name="fire_num">Fire:</string>
    <string name="one_five">105</string>
    <string name="amb_num">Ambulance:</string>
    <string name="one_four">104</string>
    <string name="police_num">Police:</string>
    <string name="one_seven">107</string>
    <string name="ring">Ring</string>
    <string name="recommended_music">Your recommended music</string>
    <string name="budapest_ex">Budapest...</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <string name="spendingbreakdown">Spending Breakdown</string>
    <string name="budgRem">Budget Remaining:</string>
    <string name="OverBudg">You\'re over budget!</string>
    <string name="overBudg">Do you think money just grows on trees???</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="lodge">Lodging</string>
    <string name="fun">Fun</string>
    <string name="budg">Budget</string>
    <string name="entertainment">Fun</string>
    <string name="budget_remaining">Budget Remaining:</string>
    <string name="update">Update</string>
    <string name="f">Food:</string>
    <string name="t">Travel:</string>
    <string name="l">Lodging:</string>
    <string name="funnnn">Fun:</string>
    <string name="adjsudf">Adjust Budget:</string>
    <string name="plus">+</string>
    <string name="minusss">-</string>
</resources>
