<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000000"/>

    <EditText
            android:id="@+id/etPackingItemName"
            android:hint="@string/pi_item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <EditText
            android:id="@+id/etPackingItemQuantity"
            android:hint="@string/quantity"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <CheckBox
            android:id="@+id/cbPackedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packed_status"
            android:textSize="15sp"/>

</LinearLayout>