<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BudgetActivity">

    <Button
            android:text="@string/minusss"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnMinus" app:layout_constraintEnd_toStartOf="@+id/etBudget"
            app:layout_constraintBottom_toBottomOf="@+id/etBudget" app:layout_constraintTop_toTopOf="@+id/etBudget"/>
    <TextView
            android:text="@string/budget_remaining"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/tvBudget" android:textSize="30sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="276dp" android:id="@+id/guideline"/>
    <EditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etFood"
            android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="200dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBudget"/>
    <EditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etTravel"
            app:layout_constraintTop_toBottomOf="@+id/etFood" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="200dp" android:layout_marginRight="200dp"/>
    <EditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etLodging"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="200dp" android:layout_marginRight="200dp"
            app:layout_constraintTop_toBottomOf="@+id/etTravel"/>
    <EditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etFun"
            app:layout_constraintTop_toBottomOf="@+id/etLodging" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="200dp" android:layout_marginRight="200dp"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/etTravel" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chartBudget"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/etFood" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/etFood" android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/etFood"/>
    <TextView
            android:text="@string/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/etTravel" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/etTravel" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etLodging"/>
    <TextView
            android:text="@string/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/etLodging" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/etLodging"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toBottomOf="@+id/etLodging"/>
    <TextView
            android:text="@string/funnnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/etFun"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/etFun" app:layout_constraintBottom_toBottomOf="@+id/etFun"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/adjsudf"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView7" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdate" app:layout_constraintStart_toStartOf="@+id/btnUpdate"
            app:layout_constraintEnd_toEndOf="@+id/btnUpdate" android:textSize="14sp"/>
    <EditText
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etBudget"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView7"
            android:textSize="14sp"/>
    <Button
            android:text="@string/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnPlus" app:layout_constraintStart_toEndOf="@+id/etBudget"
            app:layout_constraintTop_toTopOf="@+id/etBudget" app:layout_constraintBottom_toBottomOf="@+id/etBudget"/>

</android.support.constraint.ConstraintLayout>