<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        card_view:cardBackgroundColor="#BBF4FC"
        android:layout_margin="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

            <TextView
                    android:id="@+id/tvPackingItemName"
                    android:text="@string/packing_item_name_tv"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#252323"
                    android:textSize="22sp"
                    android:fontFamily="casual"/>

            <TextView
                    android:id="@+id/tvPackingItemQuantity"
                    android:text="@string/packing_item_quantity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#252323"
                    android:textSize="16sp"
                    android:fontFamily="casual"/>

            <CheckBox
                    android:layout_marginTop="8dp"
                    android:id="@+id/cbItemPackedStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_packed_stat"
                    android:textSize="15sp"/>

        </LinearLayout>

        <Button
                android:id="@+id/btnAdd"
                android:text="+"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="#4CAF50"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        <Button
                android:id="@+id/btnMinus"
                android:text="-"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="#F44336"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:orientation="horizontal">

            <Button
                    android:id="@+id/btnDelete"
                    android:text="@string/x_button"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="#FFFFFF"
                    android:layout_marginRight="10dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>