<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fbutton="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weatherbackground"
        android:orientation="vertical">

    <ToggleButton
            android:id="@+id/btnToggle"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textOn="@string/metric_txt"
            android:textOff="@string/imperial_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-medium"/>

    <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-medium"/>

    <TextView
            android:id="@+id/tvCurWeatherDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-medium"/>

    <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"/>

    <TextView
            android:id="@+id/tvCurTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="95sp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-light"/>

    <TextView
            android:id="@+id/tvWeatherInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#3F3B3B"
            android:text="@string/weather_information"
            android:fontFamily="sans-serif-medium"/>

    <TextView
            android:id="@+id/tvMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3F3B3B"
            android:fontFamily="sans-serif-light"/>

    <TextView
            android:id="@+id/tvMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3F3B3B"
            android:fontFamily="sans-serif-light"/>

</LinearLayout>